latihan html css js | calculator

--- a/podomoro/index.html
+++ b/podomoro/index.html
@@ -15,7 +15,7 @@
         <h1 class="title">Pomodoro Timer</h1>
 
         <!-- waktu -->
-        <span class="timer" id="timer">02:00</span>
+        <span class="timer" id="timer"></span>
 
         <!-- Button -->
         <div class="button-wrapper">
