--- a/kalkulator/index.html
+++ b/kalkulator/index.html
@@ -5,35 +5,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Calculator</title>
+    <link rel="stylesheet" href="./style.css">
+    <title>Kalkulator</title>
 </head>
 
 <body>
+    <!-- DIsplay -->
     <div class="container">
-        <input type="text" class="result" id="result" readonly>
+        <input type="text" class="display" id="display">
+
+        <!-- Button -->
         <div class="buttons">
             <button class="clear">C</button>
-            <button class="operator">/</button>
             <button class="operator">*</button>
+            <button class="operator">/</button>
             <button class="operator">-</button>
-            <button class="number">7</button>
-            <button class="number">8</button>
-            <button class="number">9</button>
+            <button class="number">1</button>
+            <button class="number">2</button>
+            <button class="number">3</button>
             <button class="operator">+</button>
             <button class="number">4</button>
             <button class="number">5</button>
             <button class="number">6</button>
-            <button class="equals">=</button>
-            <button class="number">1</button>
-            <button class="number">2</button>
-            <button class="number">3</button>
+            <button class="equal">=</button>
+            <button class="number">7</button>
+            <button class="number">8</button>
+            <button class="number">9</button>
             <button class="decimal">.</button>
             <button class="number">0</button>
             <button class="operator">%</button>
+
         </div>
     </div>
-    <script src="index.js"></script>
 </body>
 
 </html>
