Change title style and margin

--- a/kalkulator/index.html
+++ b/kalkulator/index.html
@@ -10,8 +10,9 @@
 </head>
 
 <body>
-    <!-- DIsplay -->
+    <!-- Container -->
     <div class="container">
+        <!-- DIsplay -->
         <input type="text" class="display" id="display">
 
         <!-- Button -->
@@ -34,7 +35,6 @@
             <button class="decimal">.</button>
             <button class="number">0</button>
             <button class="operator">%</button>
-
         </div>
     </div>
 </body>
