--- a/color-generator/index.html
+++ b/color-generator/index.html
@@ -12,24 +12,52 @@
 <body>
     <div class="header">
         <h1>Random Color Generator</h1>
-        <div class="btn" id="btn">Generate</div>
+        <div class="btn prevent-select" id="btn">Generate</div>
     </div>
-    <div class="container">
-        <div class="color-container">#7652a6</div>
-        <div class="color-container">#7652a6</div>
-        <div class="color-container">#7652a6</div>
-        <div class="color-container">#7652a6</div>
-        <div class="color-container">#7652a6</div>
-        <div class="color-container">#7652a6</div>
-        <div class="color-container">#7652a6</div>
-        <div class="color-container">#7652a6</div>
-        <div class="color-container">#7652a6</div>
-        <div class="color-container">#7652a6</div>
-        <div class="color-container">#7652a6</div>
-        <div class="color-container">#7652a6</div>
-        <div class="color-container">#7652a6</div>
-        <div class="color-container">#7652a6</div>
-        <div class="color-container">#7652a6</div>
+    <div class="container prevent-select">
+        <div class="pallet-container">
+            <div class="color-container">#7652a6</div>
+            <div class="color-container">#7652a6</div>
+            <div class="color-container">#7652a6</div>
+        </div>
+        <div class="pallet-container">
+            <div class="color-container">#7652a6</div>
+            <div class="color-container">#7652a6</div>
+            <div class="color-container">#7652a6</div>
+        </div>
+        <div class="pallet-container">
+            <div class="color-container">#7652a6</div>
+            <div class="color-container">#7652a6</div>
+            <div class="color-container">#7652a6</div>
+        </div>
+        <div class="pallet-container">
+            <div class="color-container">#7652a6</div>
+            <div class="color-container">#7652a6</div>
+            <div class="color-container">#7652a6</div>
+        </div>
+        <div class="pallet-container">
+            <div class="color-container">#7652a6</div>
+            <div class="color-container">#7652a6</div>
+            <div class="color-container">#7652a9</div>
+        </div>
+        <div class="pallet-container">
+            <div class="color-container">#7652a6</div>
+            <div class="color-container">#7652a6</div>
+            <div class="color-container">#7652a6</div>
+        </div>
+        <div class="pallet-container">
+            <div class="color-container">#7652a6</div>
+            <div class="color-container">#7652a6</div>
+            <div class="color-container">#7652a6</div>
+        </div>
+        <div class="pallet-container">
+            <div class="color-container">#7652a6</div>
+            <div class="color-container">#7652a6</div>
+            <div class="color-container">#7652a9</div>
+        </div>
+
+
+
     </div>
 
     <script src="index.js"></script>
