Drop text content from box color

--- a/color-generator/index.html
+++ b/color-generator/index.html
@@ -16,44 +16,44 @@
     </div>
     <div class="container prevent-select">
         <div class="pallet-container">
-            <div class="color-container">#7652a6</div>
-            <div class="color-container">#7652a6</div>
-            <div class="color-container">#7652a6</div>
+            <div class="color-container"> </div>
+            <div class="color-container"> </div>
+            <div class="color-container"> </div>
         </div>
         <div class="pallet-container">
-            <div class="color-container">#7652a6</div>
-            <div class="color-container">#7652a6</div>
-            <div class="color-container">#7652a6</div>
+            <div class="color-container"> </div>
+            <div class="color-container"> </div>
+            <div class="color-container"> </div>
         </div>
         <div class="pallet-container">
-            <div class="color-container">#7652a6</div>
-            <div class="color-container">#7652a6</div>
-            <div class="color-container">#7652a6</div>
+            <div class="color-container"> </div>
+            <div class="color-container"> </div>
+            <div class="color-container"> </div>
         </div>
         <div class="pallet-container">
-            <div class="color-container">#7652a6</div>
-            <div class="color-container">#7652a6</div>
-            <div class="color-container">#7652a6</div>
+            <div class="color-container"> </div>
+            <div class="color-container"> </div>
+            <div class="color-container"> </div>
         </div>
         <div class="pallet-container">
-            <div class="color-container">#7652a6</div>
-            <div class="color-container">#7652a6</div>
-            <div class="color-container">#7652a9</div>
+            <div class="color-container"> </div>
+            <div class="color-container"> </div>
+            <div class="color-container"></div>
         </div>
         <div class="pallet-container">
-            <div class="color-container">#7652a6</div>
-            <div class="color-container">#7652a6</div>
-            <div class="color-container">#7652a6</div>
+            <div class="color-container"> </div>
+            <div class="color-container"> </div>
+            <div class="color-container"> </div>
         </div>
         <div class="pallet-container">
-            <div class="color-container">#7652a6</div>
-            <div class="color-container">#7652a6</div>
-            <div class="color-container">#7652a6</div>
+            <div class="color-container"> </div>
+            <div class="color-container"> </div>
+            <div class="color-container"> </div>
         </div>
         <div class="pallet-container">
-            <div class="color-container">#7652a6</div>
-            <div class="color-container">#7652a6</div>
-            <div class="color-container">#7652a9</div>
+            <div class="color-container"> </div>
+            <div class="color-container"> </div>
+            <div class="color-container"> </div>
         </div>
 
 
