Adding copy clipboard feature

--- a/color-generator/index.html
+++ b/color-generator/index.html
@@ -2,65 +2,65 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Random Color Generator</title>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <title>Random Color Generator</title>
 </head>
 
 <body>
-    <div class="header">
-        <h1>Random Color Generator</h1>
-        <div class="btn prevent-select" id="btn">Generate</div>
-    </div>
-    <div class="container prevent-select">
-        <div class="pallet-container">
-            <div class="color-container"> </div>
-            <div class="color-container"> </div>
-            <div class="color-container"> </div>
+        <div class="header">
+                <h1>Random Color Generator</h1>
+                <div class="btn prevent-select" id="btn">Generate</div>
         </div>
-        <div class="pallet-container">
-            <div class="color-container"> </div>
-            <div class="color-container"> </div>
-            <div class="color-container"> </div>
-        </div>
-        <div class="pallet-container">
-            <div class="color-container"> </div>
-            <div class="color-container"> </div>
-            <div class="color-container"> </div>
-        </div>
-        <div class="pallet-container">
-            <div class="color-container"> </div>
-            <div class="color-container"> </div>
-            <div class="color-container"> </div>
-        </div>
-        <div class="pallet-container">
-            <div class="color-container"> </div>
-            <div class="color-container"> </div>
-            <div class="color-container"></div>
-        </div>
-        <div class="pallet-container">
-            <div class="color-container"> </div>
-            <div class="color-container"> </div>
-            <div class="color-container"> </div>
-        </div>
-        <div class="pallet-container">
-            <div class="color-container"> </div>
-            <div class="color-container"> </div>
-            <div class="color-container"> </div>
-        </div>
-        <div class="pallet-container">
-            <div class="color-container"> </div>
-            <div class="color-container"> </div>
-            <div class="color-container"> </div>
-        </div>
+        <div class="container prevent-select">
+                <div class="pallet-container">
+                        <div class="color-container" data-color=""> </div>
+                        <div class="color-container" data-color=""> </div>
+                        <div class="color-container" data-color=""> </div>
+                </div>
+                <div class="pallet-container">
+                        <div class="color-container" data-color=""> </div>
+                        <div class="color-container" data-color=""> </div>
+                        <div class="color-container" data-color=""> </div>
+                </div>
+                <div class="pallet-container">
+                        <div class="color-container" data-color=""> </div>
+                        <div class="color-container" data-color=""> </div>
+                        <div class="color-container" data-color=""> </div>
+                </div>
+                <div class="pallet-container">
+                        <div class="color-container" data-color=""> </div>
+                        <div class="color-container" data-color=""> </div>
+                        <div class="color-container" data-color=""> </div>
+                </div>
+                <div class="pallet-container">
+                        <div class="color-container" data-color=""> </div>
+                        <div class="color-container" data-color=""> </div>
+                        <div class="color-container" data-color=""></div>
+                </div>
+                <div class="pallet-container">
+                        <div class="color-container" data-color=""> </div>
+                        <div class="color-container" data-color=""> </div>
+                        <div class="color-container" data-color=""> </div>
+                </div>
+                <div class="pallet-container">
+                        <div class="color-container" data-color=""> </div>
+                        <div class="color-container" data-color=""> </div>
+                        <div class="color-container" data-color=""> </div>
+                </div>
+                <div class="pallet-container">
+                        <div class="color-container" data-color=""> </div>
+                        <div class="color-container" data-color=""> </div>
+                        <div class="color-container" data-color=""> </div>
+                </div>
 
 
 
-    </div>
+        </div>
 
-    <script src="index.js"></script>
+        <script src="index.js"></script>
 </body>
 
 </html>
