Make display element to have an initial value

--- a/kalkulator/index.html
+++ b/kalkulator/index.html
@@ -13,7 +13,7 @@
         <!-- Container -->
         <div class="container">
                 <!-- DIsplay -->
-                <input type="text" class="display" id="display">
+                <input type="text" class="display" value="0" id="display">
 
                 <!-- Button -->
                 <div class="buttons">
@@ -29,7 +29,6 @@
                         <button class="number">5</button>
                         <button class="number">6</button>
                         <button class="operator">%</button>
-
                         <button class="number">7</button>
                         <button class="number">8</button>
                         <button class="number">9</button>
