--- a/podomoro/index.html
+++ b/podomoro/index.html
@@ -2,30 +2,31 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <title>Pomodoro Timer</title>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./style.css">
+        <title>Pomodoro Timer</title>
 </head>
 
 <body>
-    <div class="container">
-        <!-- title -->
-        <h1 class="title">Pomodoro Timer</h1>
+        <div class="container">
+                <!-- title -->
+                <h1 class="title">Pomodoro Timer</h1>
 
-        <!-- waktu -->
-        <span class="timer" id="timer"></span>
+                <!-- waktu -->
+                <span class="timer" id="timer"></span>
+                <audio src="./assets/Lukrembo - Sunset (freetouse.com).mp3" autoplay loop id="audio"></audio>
 
-        <!-- Button -->
-        <div class="button-wrapper">
-            <button id="start">Start</button>
-            <button id="stop">Stop</button>
-            <button id="reset">Reset</button>
+                <!-- Button -->
+                <div class="button-wrapper">
+                        <button id="start">Start</button>
+                        <button id="stop">Stop</button>
+                        <button id="reset">Reset</button>
+                </div>
         </div>
-    </div>
 
-    <script src="index.js"></script>
+        <script src="index.js"></script>
 </body>
 
 </html>
