Set audio to mute at beginning and unmute when button start clicked

--- a/podomoro/index.html
+++ b/podomoro/index.html
@@ -16,7 +16,7 @@
 
                 <!-- waktu -->
                 <span class="timer" id="timer"></span>
-                <audio src="./assets/Lukrembo - Sunset (freetouse.com).mp3" autoplay loop id="audio"></audio>
+                <audio src="./assets/Lukrembo - Sunset (freetouse.com).mp3" autoplay muted loop id="audio"></audio>
 
                 <!-- Button -->
                 <div class="button-wrapper">
